# elixir_engine

./: .gitignore  CMakeLists.txt  CodeNamingConventions.md  README.md  copy-assets.cmake  pre-build.cmake
.github/workflows/: linux.yml  osx.yml  windows.yml
assets/audio/: Master.bank
shaders/: shader.frag  shader.vert
src/: AudioEngine.cpp  AudioEngine.h  CardGame.h  DirectXApplication.h  Input.cpp  Input.h  OpenGLApplication.h  Profiler.h  Renderer.cpp  Renderer.h  TracyClient.cpp  TriangleApplication.h  VulkanApplication.h  main.cpp
src/audio/: AudioEngine.cpp
src/common/: structs.h
src/core/: GameEngine.cpp  GameEngine.h  VulkanEngine.cpp  VulkanEngine.h
src/engine/: config.h
src/engine/api/: Game.cpp  Game.h
src/engine/assets/aseprite/: arts_palette.aseprite  arts_pixels.ase  cards.ase  fight_mockup.ase  game_atlas.ase  game_mockup.ase
src/engine/assets/audio/: Master.bank  Master.strings.bank
src/engine/assets/icons/: potion_blender_modeling.txt
src/engine/assets/jsons/: hello.json  world.json
src/engine/assets/pureref/: game_references.pur
src/engine/assets/shaders/: compile.bat  shape.frag  shape.frag.spv  shape.vert  shape_frag.spv  shape_shader.frag  shape_shader.vert  shape_vert.spv  sprite.frag  sprite.frag.spv
src/engine/assets/textures/: cards.txt
src/engine/audio/: AudioEngine.cpp  AudioEngine.h
src/engine/common/: Color.cpp  Color.h  Config.cpp  Config.h  Constants.h  GameObject.cpp  GameObject.h  Utils.h  structs.h
src/engine/core/: Time.h
src/engine/gui/: EditorInterface.cpp  EditorInterface.h
src/engine/input/: Input.cpp  Input.h
src/engine/profiling/: Logger.cpp  Logger.h
src/engine/rendering/: Camera.cpp  Camera.h  DirectXRenderer.cpp  DirectXRenderer.h  EngineRenderer.cpp  EngineRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteAtlas.cpp  SpriteAtlas.h  TestRenderSystem.cpp  TestRenderSystem.h  Texture.cpp  Texture.h  Vertex.h  VulkanCommon.h  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  Window.cpp  Window.h
src/engine/rendering/shapes/: BaseShape.cpp  BaseShape.h  Quad.cpp  Quad.h  Shape.cpp  Shape.h  TexturedQuad.cpp  TexturedQuad.h  Triangle.cpp  Triangle.h  Vertex.h
src/engine/rendering/text/: Font.cpp  Font.h
src/engine/rendering/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommon.h  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEngine.cpp  VulkanEngine.h  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanRenderer.cpp  VulkanSwapchain.cpp  VulkanSwapchain.h
src/engine/rendering/vulkan/descriptors/: VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDescriptorWriter.cpp  VulkanDescriptorWriter.h
src/engine/scenes/: SceneSystem.cpp  SceneSystem.h
src/engine/sdks/: GeforceNow.cpp  GeforceNow.h
src/engine/testing/: OpenGLApplication.h  VulkanApplication.h
src/engine/world/: Grid.cpp  Grid.h  World.cpp  World.h
src/game/: MyGame.cpp
src/input/: Input.cpp
src/profiling/: Logger.h
src/rendering/: DirectXRenderer.cpp  DirectXRenderer.h  OpenGLRenderer.h  Renderer.cpp  Renderer.h  VulkanRenderer.cpp  VulkanRenderer.h  Window.cpp  Window.h
src/testing/: LuaApplication.h
